authsampledir = $(pkglibdir)/test/1.1/html
authsample_DATA = \
		button.aspx \
		htmlanchor.aspx \
		htmlbutton.aspx \
		htmlgeneric.aspx \
		htmlimage.aspx \
		htmlinputbutton.aspx \
		htmlinputcheckbox.aspx \
		htmlinputfile.aspx \
		htmlinputhidden.aspx \
		htmlinputimage.aspx \
		htmlinputradiobutton.aspx \
		htmlinputtext.aspx \
		htmlselect.aspx \
		htmltable.aspx \
		htmltextarea.aspx \
		index.aspx

EXTRA_DIST = $(authsample_DATA)
