authsampledir = $(pkglibdir)/test/1.1/webcontrols
authsample_DATA = \
		listitem.aspx \
		temperature.aspx \
		validator1.aspx \
		web_adrotator.aspx \
		web_button.aspx \
		web_checkbox.aspx \
		web_checkboxlist.aspx \
		web_datagrid.aspx \
		web_datagrid_command.aspx \
		web_dropdownlist.aspx \
		web_hyperlink.aspx \
		web_image.aspx \
		web_imagebutton.aspx \
		web_label.aspx \
		web_linkbutton.aspx \
		web_listbox.aspx \
		web_literal.aspx \
		web_panel.aspx \
		web_placeholder.aspx \
		web_radiobutton.aspx \
		web_radiobuttonlist.aspx \
		web_regularexpressionvalidator.aspx \
		web_repeater.aspx \
		web_table2.aspx \
		web_table.aspx \
		web_textbox.aspx \
		web_xml.aspx \
		calendar.aspx \
		datalist.aspx \
		dbpage1.aspx \
		dbpage2.aspx \
		people.xml \
		web_adrotator.xml \
		peopletable.xsl

EXTRA_DIST = $(authsample_DATA)
