EXTRA_DIST = \
		AspControlTester.cs \
		ButtonTester.cs \
		CheckBoxTester.cs \
		DataGridTester.cs \
		DropDownListTester.cs \
		ImageButtonTester.cs \
		LabelTester.cs \
		LinkButtonTester.cs \
		ListBoxTester.cs \
		ListControlTester.cs \
		ListItemCollectionTester.cs \
		ListItemTester.cs \
		PanelTester.cs \
		RadioButtonTester.cs \
		TextBoxTester.cs \
		UserControlTester.cs \
		ValidationSummaryTester.cs
