EXTRA_DIST =	ButtonTest.cs \
		CheckBoxTest.cs \
		DataGridTest.cs \
		DropDownListTest.cs \
		ImageButtonTest.cs \
		LabelTest.cs \
		LinkButtonTest.cs \
		ListBoxTest.cs \
		ListControlTest.cs \
		ListItemCollectionTest.cs \
		Makefile.am \
		RadioButtonTest.cs \
		TextBoxTest.cs \
		UserControlTest.cs \
		ValidationSummaryTest.cs
